implemented user endpoints
